# spending-tracker

./: .gitignore  Dockerfile  package.json
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml
apps/backend/api/: urls.py
apps/backend/apps/authn/: __init__.py  authentication.py  services.py  views.py
apps/backend/apps/cashflow/: __init__.py  services.py  views.py
apps/backend/apps/core/: enums.py  models.py  permissions.py  serializers.py  utils.py  views.py
apps/backend/apps/credit_cards/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
apps/backend/apps/expenses/: __init__.py  admin.py  models.py  serializers.py  views.py
apps/backend/apps/finance/: admin.py  models.py  serializers.py  views.py
apps/backend/apps/fixed_rules/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  views.py
apps/backend/apps/income/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
apps/backend/apps/installments/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  views.py
apps/backend/apps/loans/: __init__.py  admin.py  models.py  serializers.py  services.py  views.py
apps/backend/apps/reports/: services.py  views.py
apps/backend/apps/settings_app/: apps.py  serializers.py  views.py
apps/backend/apps/users/: admin.py  models.py  serializers.py  services.py
apps/backend/apps/vehicles/: __init__.py  admin.py  models.py  serializers.py  (+1 more)
apps/backend/config/: urls.py
apps/backend/tests/: conftest.py  test_auth.py  test_cashflow.py  test_reports.py  test_schedules.py
(+60 files in other folders)
